# conan-geotiff

./: .travis.yml  CMakeLists.txt  FindGEOTIFF.cmake  FindLibGeoTiff.cmake  Jenkinsfile  appveyor.yml  build.py  conanbuildinfo.cmake  conanfile.py  conaninfo.txt
test/: CMakeLists.txt  conanfile.py  geotifftest.c
